# Fast-FoundationStereo

./: .gitignore  convert.sh  convert_onnx.sh  readme.md
core/: foundation_stereo.py  student_model.py
plugins/gwc_plugin_cpp/: CMakeLists.txt  GwcVolumePlugin.cpp  bench_gwc.cu  build_gwc_kernel.cu
scripts/: make_onnx.py  make_onnx_dynamic.py  merge_onnx.py  run_demo.py  run_demo_tensorrt.py  run_demo_tensorrt_single.py  train_distill.py
test_data/: intrinsics_baseline.txt
